--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ministry of culture</title>
     <link rel="stylesheet" href="index.css">
+    <title> </title>
 </head>
 <body>
 
